syntax = "proto3";

package user;

service UserService {
  rpc GetStoreByStorePublicId (GetStoreByStorePublicIdRequest) returns (GetStoreByStorePublicIdResponse);
  rpc GetBuyerByAuthId (GetBuyerByAuthIdRequest) returns (GetBuyerByAuthIdResponse);
}

message GetBuyerByAuthIdRequest {
  string authId = 1;
}

message GetBuyerByAuthIdResponse {
  string buyerPublicId = 1;
  string authId = 2;
  string storePublicId = 3;
  string username = 4;
  string email = 5;
  optional ShippingAddress shippingAddress = 6;
  optional Payment payment = 7;

}

message Payment {
  string method = 1;
  string transactionId = 2;
}

message ShippingAddress {
  string address = 1;
  string city = 2;
  string country = 3;
  string postalCode = 4;
}

message GetStoreByStorePublicIdRequest {
  string storePublicId = 1;
}

message GetStoreByStorePublicIdResponse {
  string storePublicId = 1;
  string name = 2;
  string ownerAuthId = 3;
  string username = 4;
  string email = 5;
  string description = 6;
  string socialLinks = 7;
  string completedOrders = 8;
  string cancelledOrders = 9;
  string totalEarnings = 10;
  string totalProducts = 11;
  string createdAt = 12;
}
